@@ -7,6 +7,7 @@ BEGIN {
 	$^W = 1;
 }
 
-use Test::More tests => 1;
+use Test::More tests => 2;
 
-use_ok( 'Perl::Metrics2' );
+use_ok( 'Perl::Metrics2'        );
+use_ok( 'Perl::Metrics2::Parse' );
